test/fail/switch-type.mo
let x = switch (-5) { case (x : Nat) x };
